# devramMCP

./: README.md  requirements.txt
.cursor/: mcp.json
cursor세팅/: CursorSettings.md  MCPWindows.md
sumerian_mcp/: NEXT_STEPS.md  README.md  pyproject.toml
sumerian_mcp/examples/: __init__.py  api_example.py  run_server.py
sumerian_mcp/sumerian_mcp/: __init__.py  __main__.py  cli.py  crypto.py  server.py
sumerian_mcp/tests/: __init__.py  test_crypto.py
sumerian_mcp_simple/: README.md  requirements.txt  sumerian_mcp.py  test_mcp.py
